--- a/translations/messages+intl-icu.pl.xlf
+++ b/translations/messages+intl-icu.pl.xlf
@@ -14,27 +14,7 @@
                 <source>not_available</source>
                 <target>Niedostępne</target>
             </trans-unit>
-            <trans-unit id="mit_license">
-                <source>mit_license</source>
-                <target>Licencja MIT</target>
-            </trans-unit>
 
-            <trans-unit id="title.homepage">
-                <source>title.homepage</source>
-                <target><![CDATA[Witamy w aplikacji <strong>Symfony Demo</strong>]]></target>
-            </trans-unit>
-            <trans-unit id="title.source_code">
-                <source>title.source_code</source>
-                <target>Kod źródłowy użyty do wygenerowania tej podstrony</target>
-            </trans-unit>
-            <trans-unit id="title.controller_code">
-                <source>title.controller_code</source>
-                <target>Kod kontrolera</target>
-            </trans-unit>
-            <trans-unit id="title.twig_template_code">
-                <source>title.twig_template_code</source>
-                <target>Kod szablonu Twig</target>
-            </trans-unit>
             <trans-unit id="title.login">
                 <source>title.login</source>
                 <target>Bezpieczne logowanie</target>
@@ -60,9 +40,9 @@
                 <source>action.show</source>
                 <target>Pokaż</target>
             </trans-unit>
-            <trans-unit id="action.show_code">
-                <source>action.show_code</source>
-                <target>Pokaż kod</target>
+            <trans-unit id="action.show_news">
+                <source>action.show_news</source>
+                <target>Pokaż artykuł</target>
             </trans-unit>
             <trans-unit id="action.edit">
                 <source>action.edit</source>
@@ -72,12 +52,20 @@
                 <source>action.edit_post</source>
                 <target>Edytuj artykuł</target>
             </trans-unit>
+            <trans-unit id="action.edit_news">
+                <source>action.edit_news</source>
+                <target>Edytuj artykuł</target>
+            </trans-unit>
             <trans-unit id="action.save">
                 <source>action.save</source>
                 <target>Zapisz</target>
             </trans-unit>
             <trans-unit id="action.delete_post">
                 <source>action.delete_post</source>
+                <target>Usuń artykuł</target>
+            </trans-unit>
+            <trans-unit id="action.delete_news">
+                <source>action.delete_news</source>
                 <target>Usuń artykuł</target>
             </trans-unit>
             <trans-unit id="delete_post_modal.title">
@@ -90,6 +78,10 @@
             </trans-unit>
             <trans-unit id="label.delete_post">
                 <source>label.delete_post</source>
+                <target>Usuń projekt</target>
+            </trans-unit>
+            <trans-unit id="label.delete_news">
+                <source>label.delete_news</source>
                 <target>Usuń artykuł</target>
             </trans-unit>
             <trans-unit id="label.cancel">
@@ -100,8 +92,16 @@
                 <source>action.create_post</source>
                 <target>Dodaj nowy artykuł</target>
             </trans-unit>
+            <trans-unit id="action.create_news">
+                <source>action.create_news</source>
+                <target>Dodaj nowy artykuł</target>
+            </trans-unit>
             <trans-unit id="label.create_post">
                 <source>label.create_post</source>
+                <target>Dodaj artykuł</target>
+            </trans-unit>
+            <trans-unit id="label.create_news">
+                <source>label.create_news</source>
                 <target>Dodaj artykuł</target>
             </trans-unit>
             <trans-unit id="label.save_and_create_new">
@@ -182,9 +182,13 @@
                 <source>menu.toggle_nav</source>
                 <target>Przełącz nawigację</target>
             </trans-unit>
-            <trans-unit id="menu.post_list">
-                <source>menu.post_list</source>
-                <target>Lista artykułów</target>
+            <trans-unit id="menu.projects">
+                <source>menu.projects</source>
+                <target>Projekty</target>
+            </trans-unit>
+            <trans-unit id="menu.news">
+                <source>menu.news</source>
+                <target>Artykuły</target>
             </trans-unit>
             <trans-unit id="menu.back_to_blog">
                 <source>menu.back_to_blog</source>
@@ -247,45 +251,13 @@
                 <source>post.deleted_successfully</source>
                 <target>Artykuł został usunięty!</target>
             </trans-unit>
-            <trans-unit id="help.app_description">
-                <source>help.app_description</source>
-                <target><![CDATA[To jest <strong> przykładowa aplikacja </strong> zbudowana przy pomocy frameworka Symfony, dla zademonstrowania polecanego sposobu tworzenia aplikacji przy jego użyciu.]]></target>
-            </trans-unit>
-            <trans-unit id="help.show_code">
-                <source>help.show_code</source>
-                <target><![CDATA[Kliknij poniższy przycisk, aby zobaczyć kod <strong>kontrolera</strong> oraz <strong>szablonu</strong> użytych podczas generowania tej podstrony.]]></target>
-            </trans-unit>
-            <trans-unit id="help.browse_app">
-                <source>help.browse_app</source>
-                <target><![CDATA[Przeglądaj <strong>publiczną część</strong> aplikacji demonstracyjnej.]]></target>
-            </trans-unit>
-            <trans-unit id="help.browse_admin">
-                <source>help.browse_admin</source>
-                <target><![CDATA[Przeglądaj <strong>panel administracyjny</strong> aplikacji demonstracyjnej.]]></target>
-            </trans-unit>
-            <trans-unit id="help.login_users">
-                <source>help.login_users</source>
-                <target>Użyj dowolnego z poniższych użytkowników</target>
-            </trans-unit>
             <trans-unit id="help.role_user">
                 <source>help.role_user</source>
-                <target>zwykły użytkownik</target>
+                <target>użytkownik</target>
             </trans-unit>
             <trans-unit id="help.role_admin">
                 <source>help.role_admin</source>
                 <target>administrator</target>
-            </trans-unit>
-            <trans-unit id="help.reload_fixtures">
-                <source>help.reload_fixtures</source>
-                <target>Jeśli powyższe dane logowania nie działają, załaduj ponownie przykładowe dane dla tej aplikacji. Uruchom następującą komendę:</target>
-            </trans-unit>
-            <trans-unit id="help.add_user">
-                <source>help.add_user</source>
-                <target>Jeśli chcesz dodać nowego użytkownika, uruchom następującą komendę:</target>
-            </trans-unit>
-            <trans-unit id="help.more_information">
-                <source>help.more_information</source>
-                <target><![CDATA[Sprawdź <a href="https://symfony.com/doc">dokumentację Symfony</a>, aby uzyskać więcej informacji.]]></target>
             </trans-unit>
 
             <trans-unit id="paginator.previous">
