--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -56,13 +56,13 @@
                 <source>title.login</source>
                 <target>Secure Sign in</target>
             </trans-unit>
-            <trans-unit id="title.post_list">
-                <source>title.post_list</source>
-                <target>Post List</target>
+            <trans-unit id="title.project_list">
+                <source>title.project_list</source>
+                <target>Project List</target>
             </trans-unit>
-            <trans-unit id="title.edit_post">
-                <source>title.edit_post</source>
-                <target>Edit post #{id, number}</target>
+            <trans-unit id="title.edit_project">
+                <source>title.edit_project</source>
+                <target>Edit project #{id, number}</target>
             </trans-unit>
             <trans-unit id="title.add_comment">
                 <source>title.add_comment</source>
@@ -85,9 +85,9 @@
                 <source>action.show</source>
                 <target>Show</target>
             </trans-unit>
-            <trans-unit id="action.show_post">
-                <source>action.show_post</source>
-                <target>Show post</target>
+            <trans-unit id="action.show_project">
+                <source>action.show_project</source>
+                <target>Show project</target>
             </trans-unit>
             <trans-unit id="action.show_news">
                 <source>action.show_news</source>
@@ -97,9 +97,9 @@
                 <source>action.edit</source>
                 <target>Edit</target>
             </trans-unit>
-            <trans-unit id="action.edit_post">
-                <source>action.edit_post</source>
-                <target>Edit post</target>
+            <trans-unit id="action.edit_project">
+                <source>action.edit_project</source>
+                <target>Edit project</target>
             </trans-unit>
             <trans-unit id="action.edit_news">
                 <source>action.edit_news</source>
@@ -109,25 +109,25 @@
                 <source>action.save</source>
                 <target>Save changes</target>
             </trans-unit>
-            <trans-unit id="action.delete_post">
-                <source>action.delete_post</source>
-                <target>Delete post</target>
+            <trans-unit id="action.delete_project">
+                <source>action.delete_project</source>
+                <target>Delete project</target>
             </trans-unit>
             <trans-unit id="action.delete_news">
                 <source>action.delete_news</source>
                 <target>Delete news</target>
             </trans-unit>
-            <trans-unit id="delete_post_modal.title">
-                <source>delete_post_modal.title</source>
-                <target>Are you sure you want to delete this post?</target>
+            <trans-unit id="delete_project_modal.title">
+                <source>delete_project_modal.title</source>
+                <target>Are you sure you want to delete this project?</target>
             </trans-unit>
-            <trans-unit id="delete_post_modal.body">
-                <source>delete_post_modal.body</source>
+            <trans-unit id="delete_project_modal.body">
+                <source>delete_project_modal.body</source>
                 <target>This action cannot be undone.</target>
             </trans-unit>
-            <trans-unit id="label.delete_post">
-                <source>label.delete_post</source>
-                <target>Delete post</target>
+            <trans-unit id="label.delete_project">
+                <source>label.delete_project</source>
+                <target>Delete project</target>
             </trans-unit>
             <trans-unit id="label.delete_news">
                 <source>label.delete_news</source>
@@ -137,17 +137,17 @@
                 <source>label.cancel</source>
                 <target>Cancel</target>
             </trans-unit>
-            <trans-unit id="action.create_post">
-                <source>action.create_post</source>
-                <target>Create a new post</target>
+            <trans-unit id="action.create_project">
+                <source>action.create_project</source>
+                <target>Create a new project</target>
             </trans-unit>
             <trans-unit id="action.create_news">
                 <source>action.create_news</source>
                 <target>Create news</target>
             </trans-unit>
-            <trans-unit id="label.create_post">
-                <source>label.create_post</source>
-                <target>Create post</target>
+            <trans-unit id="label.create_project">
+                <source>label.create_project</source>
+                <target>Create project</target>
             </trans-unit>
             <trans-unit id="label.create_news">
                 <source>label.create_news</source>
@@ -159,7 +159,7 @@
             </trans-unit>
             <trans-unit id="action.back_to_list">
                 <source>action.back_to_list</source>
-                <target>Back to the post list</target>
+                <target>Back to the project list</target>
             </trans-unit>
             <trans-unit id="action.publish_comment">
                 <source>action.publish_comment</source>
@@ -242,9 +242,9 @@
                 <source>label.actions</source>
                 <target>Actions</target>
             </trans-unit>
-            <trans-unit id="title.post_new">
-                <source>title.post_new</source>
-                <target>Post creation</target>
+            <trans-unit id="title.project_new">
+                <source>title.project_new</source>
+                <target>project creation</target>
             </trans-unit>
             <trans-unit id="action.edit_contents">
                 <source>action.edit_contents</source>
@@ -267,9 +267,9 @@
                 <source>menu.news</source>
                 <target>News</target>
             </trans-unit>
-            <trans-unit id="menu.back_to_blog">
-                <source>menu.back_to_blog</source>
-                <target>Back to blog</target>
+            <trans-unit id="menu.back_to_projects">
+                <source>menu.back_to_projects</source>
+                <target>Back to projects</target>
             </trans-unit>
             <trans-unit id="menu.homepage">
                 <source>menu.homepage</source>
@@ -296,44 +296,44 @@
                 <target>Search</target>
             </trans-unit>
 
-            <trans-unit id="post.to_publish_a_comment">
-                <source>post.to_publish_a_comment</source>
+            <trans-unit id="project.to_publish_a_comment">
+                <source>project.to_publish_a_comment</source>
                 <target>to publish a comment</target>
             </trans-unit>
-            <trans-unit id="post.num_comments">
-                <source>post.num_comments</source>
+            <trans-unit id="project.num_comments">
+                <source>project.num_comments</source>
                 <target>{count, plural, one {# comment} other {# comments}}</target>
             </trans-unit>
-            <trans-unit id="post.commented_on">
-                <source>post.commented_on</source>
+            <trans-unit id="project.commented_on">
+                <source>project.commented_on</source>
                 <target>commented on</target>
             </trans-unit>
-            <trans-unit id="post.no_comments">
-                <source>post.no_comments</source>
-                <target>Be the first to comment on this post.</target>
+            <trans-unit id="project.no_comments">
+                <source>project.no_comments</source>
+                <target>Be the first to comment on this project.</target>
             </trans-unit>
-            <trans-unit id="post.no_posts_found">
-                <source>post.no_posts_found</source>
-                <target>No posts found.</target>
+            <trans-unit id="project.no_projects_found">
+                <source>project.no_projects_found</source>
+                <target>No projects found.</target>
             </trans-unit>
-            <trans-unit id="post.created_successfully">
-                <source>post.created_successfully</source>
-                <target>Post created successfully!</target>
+            <trans-unit id="project.created_successfully">
+                <source>project.created_successfully</source>
+                <target>project created successfully!</target>
             </trans-unit>
-            <trans-unit id="post.updated_successfully">
-                <source>post.updated_successfully</source>
-                <target>Post updated successfully!</target>
+            <trans-unit id="project.updated_successfully">
+                <source>project.updated_successfully</source>
+                <target>project updated successfully!</target>
             </trans-unit>
-            <trans-unit id="post.deleted_successfully">
-                <source>post.deleted_successfully</source>
-                <target>Post deleted successfully!</target>
+            <trans-unit id="project.deleted_successfully">
+                <source>project.deleted_successfully</source>
+                <target>project deleted successfully!</target>
             </trans-unit>
-            <trans-unit id="post.search_for">
-                <source>post.search_for</source>
+            <trans-unit id="project.search_for">
+                <source>project.search_for</source>
                 <target>Search for...</target>
             </trans-unit>
-            <trans-unit id="post.search_no_results">
-                <source>post.search_no_results</source>
+            <trans-unit id="project.search_no_results">
+                <source>project.search_no_results</source>
                 <target>No results found</target>
             </trans-unit>
 
@@ -350,17 +350,17 @@
                 <source>help.role_admin</source>
                 <target>administrator</target>
             </trans-unit>
-            <trans-unit id="help.post_summary">
-                <source>help.post_summary</source>
+            <trans-unit id="help.project_summary">
+                <source>help.project_summary</source>
                 <target>Summaries can't contain Markdown or HTML contents; only plain text.</target>
             </trans-unit>
-            <trans-unit id="help.post_publication">
-                <source>help.post_publication</source>
-                <target>Set the date in the future to schedule the blog post publication.</target>
+            <trans-unit id="help.project_publication">
+                <source>help.project_publication</source>
+                <target>Set the date in the future to schedule the blog project publication.</target>
             </trans-unit>
-            <trans-unit id="help.post_content">
-                <source>help.post_content</source>
-                <target>Use Markdown to format the blog post contents. HTML is allowed too.</target>
+            <trans-unit id="help.project_content">
+                <source>help.project_content</source>
+                <target>Use Markdown to format the blog project contents. HTML is allowed too.</target>
             </trans-unit>
             <trans-unit id="help.comment_content">
                 <source>help.comment_content</source>
@@ -383,6 +383,11 @@
             <trans-unit id="paginator.current">
                 <source>paginator.current</source>
                 <target>(current)</target>
+            </trans-unit>
+
+            <trans-unit id="news.no_news_found">
+                <source>news.no_news_found</source>
+                <target>No news found</target>
             </trans-unit>
         </body>
     </file>
