--- a/translations/messages+intl-icu.pl.xlf
+++ b/translations/messages+intl-icu.pl.xlf
@@ -268,6 +268,11 @@
                 <source>paginator.next</source>
                 <target>Następna</target>
             </trans-unit>
+
+            <trans-unit id="title.news_list">
+                <source>title.news_list</source>
+                <target>Lista artykułów</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
