Bootstrap update to v4, added image and project files upload

--- a/translations/messages+intl-icu.en.xlf
+++ b/translations/messages+intl-icu.en.xlf
@@ -109,6 +109,10 @@
                 <source>action.save</source>
                 <target>Save changes</target>
             </trans-unit>
+            <trans-unit id="action.download">
+                <source>action.download</source>
+                <target>Download</target>
+            </trans-unit>
             <trans-unit id="action.delete_project">
                 <source>action.delete_project</source>
                 <target>Delete project</target>
